--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.4"
+    },
+    "dependencies": {
+        "@inertiajs/react": "^2.1.10",
+        "@vitejs/plugin-react": "^5.0.3",
+        "react": "^19.1.1",
+        "react-dom": "^19.1.1"
     }
 }
