--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "devDependencies": {
         "@inertiajs/react": "^1.3.0",
         "@tailwindcss/vite": "^4.0.0-alpha.25",
+        "@types/date-fns": "^2.5.3",
         "@types/node": "^20.10.0",
         "@types/react": "^19.0.2",
         "@types/react-dom": "^19.0.2",
@@ -24,9 +25,11 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^5.2.2",
+        "@radix-ui/react-checkbox": "^1.3.3",
         "@radix-ui/react-dialog": "^1.1.15",
         "@radix-ui/react-dropdown-menu": "^2.1.16",
         "@radix-ui/react-label": "^2.1.7",
+        "@radix-ui/react-popover": "^1.1.15",
         "@radix-ui/react-select": "^2.2.6",
         "@radix-ui/react-slot": "^1.2.3",
         "class-variance-authority": "^0.7.1",
