--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
         "vite-plugin-full-reload": "^1.2.0"
     },
     "dependencies": {
+        "@hello-pangea/dnd": "^18.0.1",
         "@hookform/resolvers": "^5.2.2",
+        "@inertiajs/inertia": "^0.11.1",
         "@radix-ui/react-checkbox": "^1.3.3",
         "@radix-ui/react-dialog": "^1.1.15",
         "@radix-ui/react-dropdown-menu": "^2.1.16",
         "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-popover": "^1.1.15",
+        "@radix-ui/react-scroll-area": "^1.2.10",
         "@radix-ui/react-select": "^2.2.6",
         "@radix-ui/react-slot": "^1.2.3",
         "class-variance-authority": "^0.7.1",
@@ -40,7 +43,9 @@
         "react-day-picker": "^9.11.0",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.63.0",
+        "recharts": "^3.2.1",
         "tailwind-merge": "^3.3.1",
+        "ziggy-js": "^2.6.0",
         "zod": "^4.1.11"
     }
 }
